--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,19 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="#000000" />
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="BadJokes" />
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="BadJokes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
+    <link rel="apple-touch-icon" href="/manifest/icon-192x192.png" sizes="" />
+
+    <link rel="apple-touch-icon" href="/manifest/icon-384x384.png" sizes="" />
+
+    <link rel="apple-touch-icon" href="/manifest/icon-512x512.png" sizes="" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="manifest" href="../manifest.json" />
+    <script src="../serviceworker.js" type = "text/javascript"></script>
+    <script type="text/javascript">
+      // Initialize the service worker
+      if ("serviceWorker" in navigator) {
+        
+        navigator.serviceWorker
+          .register("/serviceworker.js", {
+            scope: "/",
+          })
+          .then(
+            function (registration) {
+              console.log(registration);
+              // Registration was successful
+            },
+            function (err) {
+              console.log(err);
+            }
+          );
+      }
+    </script>
     <title>KhaoMeter</title>
     <style>
-      h1 {
-         padding-top: 10vh;
-         color: #7c98d6;
+      body {
+        overflow-x: none !important;
       }
-      th, tr {
+      h1 {
+        padding-top: 10vh;
+        color: #7c98d6;
+      }
+      th,
+      tr {
         color: azure;
       }
       .tb {
@@ -53,26 +93,31 @@
         />
         <button class="btn btn-dark" type="submit">Add Participant</button>
       </form>
-      <div class = "tb">
-      <table class="table table-striped table-responsive">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Add A Joke</th>
-            <th>Counter</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% participants.forEach(participant => { %>
-          <tr>
-            <td><span><%= participant.name %></span></td>
-            <td><form action="/increment/<%-participant.name%>" method="POST"><button class="btn btn-dark" type="submit">Khalle</button></form></td>
-            <td><%= participant.counter %> Khalles</td>
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
+      <div class="tb">
+        <table class="table table-striped table-responsive">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Add A Joke</th>
+              <th>Counter</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% participants.forEach(participant => { %>
+            <tr>
+              <td><span><%= participant.name %></span></td>
+              <td>
+                <form action="/increment/<%-participant.name%>" method="POST">
+                  <button class="btn btn-dark" type="submit">Khalle</button>
+                </form>
+              </td>
+              <td><%= participant.counter %> Khalles</td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+      </div>
     </div>
-    </div>
+    <script src="../app.js"></script>
   </body>
 </html>
