--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,12 +58,13 @@
       th,
       tr {
         color:aliceblue;
+        
       }
       .tb {
         color:aliceblue;
         display: block;
         margin: 0 auto;
-        width: 90%;
+        width: 100vw;
         align-items: center;
         align-content: center;
         align-self: center;
@@ -142,8 +143,7 @@
       <div class="medals">
         <div><span id = "medal">🥇</span><%= topScorers[0].name %></div>
         <div><span id = "medal">🥈</span><%= topScorers[1].name %></div>
-        <div><span id = "medal">🥉</span><%= topScorers[2].name %></div>
-        
+        <div><span id = "medal">🥉</span><%= topScorers[2].name %></div> 
       </div>
     </div>
     <script src="../app.js"></script>
